--- a/README
+++ b/README
@@ -7,13 +7,13 @@ Valid GameTypes (constants):
 PN_TEXAS   PN_OMAHA   PN_7STUD   PN_5DRAW   PN_5DRAW_27
 PN_TEXAS8  PN_OMAHA8  PN_7STUD8  PN_5DRAW8  PN_RAZZ
 
-Types ending with 8 is hi/lo games.
+Types ending with 8 are hi/lo games.
 
 We currently have one ini setting, pokenum.iterations.
 Specify it like: ini_set('pokenum.iterations', 100000); (defualt: 100000)
 
 Example usage (AhAc vs KdKc):
-print_r(pokenum(POKENUM_TEXAS, array(array('Ah', 'Ac'), array('Kd', 'Kc'))));"
+print_r(pokenum(POKENUM_TEXAS, array('Ah Ac', 'Kd Kc')));"
 Array
 (
     [players] => 2
