Updated INSTALL with information on how to compile pokenum support into your php binary.

--- a/INSTALL
+++ b/INSTALL
@@ -15,3 +15,11 @@ $ make install
 
 Add extension=pokenum.so to your php.ini or use dl('pokenum.so'); in your script.
 
+If you instead want to compile this into your php binary do this:
+
+$ cd your-php-source
+$ git clone git@github.com:steevel/pokenum-php.git ext/pokenum
+$ ./buildconf
+$ ./configure --enable-pokenum [your other configure parameters]
+$ make
+$ su -c "make install"
