Removed fixed stuff from TODO. Updated README with error/errno information.

--- a/README
+++ b/README
@@ -2,6 +2,10 @@ This is pokenum from poker-eval built as a php extension.
 It currently lacks a lot of error handling.
 
 Syntax: pokenum(int GameType, array Hands [, array BoardCards [, array DeadCards]])
+Syntax: pokenum_error() (returns false if no errors, a string otherwise)
+Syntax: pokenum_errno() (returns errno, 0 if no error have occured)
+
+error/errno is reset on every use of pokenum()
 
 Valid GameTypes (constants):
 PN_TEXAS   PN_OMAHA   PN_7STUD   PN_5DRAW   PN_5DRAW_27
