--- a/README
+++ b/README
@@ -4,12 +4,14 @@ It currently lacks a lot of error handling.
 Syntax: pokenum(int GameType, array Hands [, array BoardCards [, array DeadCards]])
 Syntax: pokenum_error() (returns false if no errors, a string otherwise)
 Syntax: pokenum_errno() (returns errno, 0 if no error have occured)
+Syntax: pokenum_param([int GameType]) (returns information about all/specific game type)
 
 error/errno is reset on every use of pokenum()
 
 Valid GameTypes (constants):
-PN_TEXAS   PN_OMAHA   PN_7STUD   PN_5DRAW   PN_5DRAW_27
-PN_TEXAS8  PN_OMAHA8  PN_7STUD8  PN_5DRAW8  PN_RAZZ
+PN_TEXAS   PN_OMAHA   PN_7STUD    PN_5DRAW    PN_LOWBALL
+PN_TEXAS8  PN_OMAHA8  PN_7STUD8   PN_5DRAW8   PN_LOWBALL27
+                      PN_7STUDNSQ PN_5DRAWNSQ PN_RAZZ
 
 Types ending with 8 are hi/lo games.
 
